# Flux

./: .gitignore  CMakeLists.txt  README.md  flux.desktop  vcpkg.json
Flux/: CMakeLists.txt  Flux.cpp  Flux.h  main.cpp  resource.rc
Flux/engine/: 3DRenderer.cpp  3DRenderer.h  Model.cpp  Model.h  OpenGLManager.cpp  OpenGLManager.h  Textureloader.cpp  Textureloader.h  Window.cpp  Window.h  globals.cpp  globals.h  luaEngine.cpp  luaEngine.h  runtime.cpp  runtime.h  scriptmanager.cpp  scriptmanager.h
Flux/engine/OpenGL/: ShaderSource.frag  ShaderSource.vert
Flux/engine/gui/: texteditor.cpp  texteditor.h
Flux/engine/gui/viewport/: explorer.cpp  explorer.h  heiarchy.cpp  heiarchy.h  output.cpp  output.h  properties.cpp  properties.h  ribbon.cpp  ribbon.h  viewport.cpp  viewport.h
Flux/engine/mechanics/: SceneSerializer.h  Scenenode.h  SplashScreen.h  camera.h  luabridge.h
Flux/shaders/: bbVertSrc.glsl  fragSrc.glsl  skyboxFragShader.glsl  skyboxVertShader.glsl  vertSrc.glsl
Flux/templates/File_Templates/scripts/: TemplateScript.cpp  TemplateScript.lua  TemplateScript.py
Flux/templates/Project_Templates/base_game_folder_lua/: main.lua
Flux/templates/base_game_folder/: main.lua
